<resources>
    <string name="app_name">Practica</string>
    <string name="bottom_navigation_bar_botonUno">Inicio</string>
    <string name="bottom_navigation_bar_botonDos">Identificar</string>
    <string name="bottom_navigation_bar_botonTres">Bitácora</string>
    <string name="bottom_navigation_bar_botonCuatro">Tutorial</string>
    <string name="btnTutorialIdentificar">Ayuda</string>
    <string name="imgButtonIdentificar">Toca la imagen para continuar</string>
    <string name="cargarImagenButton">Cargar otra imagen</string>

    <string name="tutorial_uno">1.- Asegúrate de que la foto sea clara</string>
    <string name="tutorial_dos">2.- Toma una foto de todo el animal</string>
    <string name="tutorial_tres">3.- Asegúrate que solo exista un animal en la foto</string>
    <string name="tutorial_cuatro">4.- Asegúrate que la imagen del animal no sea editada</string>
    <string name="tutorial_cinco">5.- Asegúrate de enfocar al animal</string>
    <string name="dato_curioso">Dato curioso</string>
    <string name="dato_curioso_init_text">¡Dale al botón para obtener un dato curioso!</string>
    <string name="corregir_texto">¿La aplicación se equivoco? ¡Ayudanos a corregirlo!</string>

</resources>