<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="344dp"
        android:layout_height="351dp"
        android:layout_marginBottom="168dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_inicio" />

    <Button
        android:id="@+id/btnIdentificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_navigation_bar_botonDos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBitacora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.269" />

    <Button
        android:id="@+id/btnBitacora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_navigation_bar_botonTres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIdentificar"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/randomFact"
        android:layout_width="197dp"
        android:layout_height="134dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/dato_curioso_init_text"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateFact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="154dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/randomFact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/random" />

    <Button
        android:id="@+id/btnUpdateFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dato_curioso"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>