<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/okay_icon"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom_navigation_bar_botonCuatro"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            android:fontFamily="@font/amaranto"
            android:gravity="center">

        </TextView>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/wrong_icon"/>

    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bloque_uno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/tutorial_uno"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5"
                    android:background="@drawable/searchview_background"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/imgViewGato"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/gato_claro">
                    </ImageView>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5">

                    <ImageView
                        android:id="@+id/imgViewGatoOscuro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/gato_oscuro">
                    </ImageView>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tutorial_dos"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <ImageView
                        android:id="@+id/imgViewCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/raton_completo"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6">

                    <ImageView
                        android:id="@+id/imgViewIncompleto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/raton_incompleto" />

                </androidx.cardview.widget.CardView>





            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/consejoTres"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tutorial_tres"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoTres"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <ImageView
                        android:id="@+id/imgViewUnico"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/sardina"
                        android:scaleType="fitXY"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoTres">
                    <ImageView
                        android:id="@+id/imgViewMultiple"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/sardinas"/>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/consejoCuatro"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tutorial_cuatro"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoCuatro"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <ImageView
                        android:id="@+id/imgViewUnedited"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/gallo" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoCuatro">

                    <ImageView
                        android:id="@+id/imgViewEdited"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/montaje">
                    </ImageView>

                </androidx.cardview.widget.CardView>



            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/consejoCinco"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tutorial_cinco"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoCinco"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/imgViewFocus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/focus"/>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/consejoCinco">

                    <ImageView
                        android:id="@+id/imgViewBlur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/unfocus"/>

                </androidx.cardview.widget.CardView>






            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

    </ScrollView>



</LinearLayout>